--- a/resources/common/common.css
+++ b/resources/common/common.css
@@ -107,3 +107,86 @@ mark {
   /* 调整半透明程度 */
   z-index: -1;
 }
+
+
+/* 稀有度 */
+.rarity-0 {
+  box-shadow: 0px 0px 0 1px #869ba8;
+  background-image: linear-gradient(to bottom,
+      rgba(134, 155, 168, 0.3) 0%,
+      rgba(134, 155, 168, 0.1) 75%,
+      rgba(134, 155, 168, 0.2) 100%);
+}
+
+.rarity-0 .text {
+  padding: 5px 0 3px 0;
+  border-top: 3px solid 869ba8;
+  background-image: linear-gradient(to bottom, #51575a, #52575b, #4a5054, #4a5054);
+}
+
+.rarity-1 {
+  box-shadow: 0px 0px 0 1px #2acf80;
+  background-image: linear-gradient(to bottom,
+      rgba(42, 207, 128, 0.3) 0%,
+      rgba(42, 207, 128, 0.1) 75%,
+      rgba(42, 207, 128, 0.2) 100%);
+}
+
+.rarity-1 .text {
+  padding: 5px 0 3px 0;
+  border-top: 3px solid #2acf80;
+  background-image: linear-gradient(to bottom, #51575a, #52575b, #4a5054, #4a5054);
+}
+
+.rarity-2 {
+  box-shadow: 0px 0px 0 1px #33aaff;
+  background-image: linear-gradient(to bottom,
+      rgba(51, 170, 255, 0.3) 0%,
+      rgba(51, 170, 255, 0.1) 75%,
+      rgba(51, 170, 255, 0.2) 100%);
+}
+
+.rarity-2 .text {
+  padding: 5px 0 3px 0;
+  border-top: 3px solid #33aaff;
+  background-image: linear-gradient(to bottom, #51575a, #52575b, #4a5054, #4a5054);
+}
+
+.rarity-3 {
+  box-shadow: 0px 0px 0 1px #945aff;
+  background-image: linear-gradient(to bottom,
+      rgba(148, 90, 255, 0.3) 0%,
+      rgba(148, 90, 255, 0.1) 75%,
+      rgba(148, 90, 255, 0.2) 100%);
+}
+.rarity-3 .text {
+  padding: 5px 0 3px 0;
+  border-top: 3px solid #945aff;
+  background-image: linear-gradient(to bottom, #2d1b4d, #2d1b4d, #190f2b, #050309);
+}
+
+
+.rarity-4 {
+  box-shadow: 0px 0px 0 1px #ecc566;
+  background-image: linear-gradient(to bottom,
+      rgba(236, 197, 102, 0.3) 0%,
+      rgba(236, 197, 102, 0.1) 75%,
+      rgba(236, 197, 102, 0.2) 100%)
+}
+
+
+.rarity-4 .text {
+  padding: 5px 0 3px 0;
+  border-top: 3px solid #ecc566;
+  background-image: linear-gradient(to bottom, #473b1f, #473b1f, #2b2413, #080704);
+}
+
+.rarity {
+  height: 0;
+  overflow: visible;
+}
+.rarity img {
+  height: 20px;
+  margin-left: 50%;
+  transform: translate(-50%, -12px);
+}
