--- a/resources/task-item/list.css
+++ b/resources/task-item/list.css
@@ -16,17 +16,20 @@
     margin-top: 10px;
     margin-left: 5px;
     margin-right: 5px;
-    width: 105px;
-    height: 105px;
+    min-width: 105px;
+    width:100%;
+    height: 105px; 
     object-fit: contain;
     object-position: center center;
 }
+
+
 
 .task-text {
     width: 100%;
     text-align: center;
     color: #dadada;
-    font-size: 22px;
+    font-size: 20px;
     border-top: 3px solid #adafb3;
     background-color: #172335;
 }
